Modify : Pwd check

--- a/src/main/resources/templates/disease/diseaseChart.html
+++ b/src/main/resources/templates/disease/diseaseChart.html
@@ -55,25 +55,25 @@
                     </select>
                 </div>
 
-                <div class="form-option">
-                    <select th:field="*{name4}">
-                        <option th:value="'아픔'">아픔</option>
-                        <option th:value="'발열'">발열</option>
-                        <option th:value="'아픔2'">아픔2</option>
-                        <option th:value="'아픔3'">아픔3</option>
-                        <option th:value="'아픔4'">아픔4</option>
-                    </select>
-                </div>
+<!--                <div class="form-option">-->
+<!--                    <select th:field="*{name4}">-->
+<!--                        <option th:value="'아픔'">아픔</option>-->
+<!--                        <option th:value="'발열'">발열</option>-->
+<!--                        <option th:value="'아픔2'">아픔2</option>-->
+<!--                        <option th:value="'아픔3'">아픔3</option>-->
+<!--                        <option th:value="'아픔4'">아픔4</option>-->
+<!--                    </select>-->
+<!--                </div>-->
 
-                <div class="form-option">
-                    <select th:field="*{name5}">
-                        <option th:value="'아픔'">아픔</option>
-                        <option th:value="'아픔1'">아픔1</option>
-                        <option th:value="'난청'">난청</option>
-                        <option th:value="'아픔3'">아픔3</option>
-                        <option th:value="'아픔4'">아픔4</option>
-                    </select>
-                </div>
+<!--                <div class="form-option">-->
+<!--                    <select th:field="*{name5}">-->
+<!--                        <option th:value="'아픔'">아픔</option>-->
+<!--                        <option th:value="'아픔1'">아픔1</option>-->
+<!--                        <option th:value="'난청'">난청</option>-->
+<!--                        <option th:value="'아픔3'">아픔3</option>-->
+<!--                        <option th:value="'아픔4'">아픔4</option>-->
+<!--                    </select>-->
+<!--                </div>-->
 
 
                 <div class="container-login100-form-btn">
