--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -20,7 +20,11 @@
         <link rel="stylesheet" href="/../../../static/leopet/css/magnific-popup.css">
         <!-- style CSS -->
         <link rel="stylesheet" href="/../../../static/leopet/css/style.css">
+        <!-- multi select CSS -->
         <link rel="stylesheet" href="/../../static/css/multiselect.css">
+        <!-- circle progress bar CSS -->
+        <link rel="stylesheet" type="text/css" href="/../../static/css/plugin.css">
+        <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
 
         <!--===============================================================================================-->
         <!-- vender의 favicon 참조 삭제 -->
