--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -64,5 +64,7 @@
         <script src="/../static/leopet/js/owl.carousel.min.js"></script>
         <!-- custom js -->
         <script src="/../static/leopet/js/custom.js"></script>
+        <!-- circle progress bar js -->
+        <script src="/../static/js/plugin.js"></script>
     </footer>
 </html>
