--- a/src/main/resources/templates/members/recommends/recommendation.html
+++ b/src/main/resources/templates/members/recommends/recommendation.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="/../../../static/css/kakao.css">
     <body>
         <header th:replace="fragments/header :: headerFragment"></header>
+
         <!-- 예약하기 모달창 양식 구현-->
         <div class="modal fade" id="modal_div">
             <div class="modal-dialog">
@@ -42,6 +43,18 @@
                 </div>
             </div>
         </div>
+
+        <!-- 반려견 질병 진단 결과 시각화 -->
+        <table id="diagnosisTable">
+            <tbody id="diagnosisList">
+                <tr>
+
+                </tr>
+            </tbody>
+        </table>
+
+        <div id="diagDonutChart" style="width: 900px; height: 500px;"></div>
+
         <div class="map_wrap">
             <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
 
@@ -341,13 +354,34 @@
                 });
 
             }
-
-
-
-
         </script>
 
         <div id="dropDownSelect1"></div>
+
+        <!-- 반려견 질병 진단 시각화 API -->
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <script type="text/javascript">
+            google.charts.load("current", {packages:["corechart"]});
+            google.charts.setOnLoadCallback(drawDonutChart);
+            function drawDonutChart() {
+                var data = google.visualization.arrayToDataTable([
+                    ['Task', 'Hours per Day'],
+                    ['Work',     11],
+                    ['Eat',      2],
+                    ['Commute',  2],
+                    ['Watch TV', 2],
+                    ['Sleep',    7]
+                ]);
+
+                var options = {
+                    title: '질병 진단 결과',
+                    pieHole: 0.4,
+                };
+
+                var chart = new google.visualization.PieChart(document.getElementById('diagDonutChart'));
+                chart.draw(data, options);
+            }
+        </script>
 
 
         <!--===============================================================================================-->
