--- a/src/main/resources/templates/disease/diseaseInfo.html
+++ b/src/main/resources/templates/disease/diseaseInfo.html
@@ -6,8 +6,8 @@
         <header th:replace="fragments/header :: headerFragment"></header>
 
         <section class="about_part section_padding">
-            <div class="container">
-                <div class="row align-items-center align-content-between">
+            <div class="container col-lg-12">
+                <div class="align-items-center align-content-between">
                     <table id="diseaseTable">
                         <tbody id="diseaseList">
                             <tr th:each="disease : ${diseases}" class="diseaseTR" hidden="true">
@@ -27,13 +27,16 @@
                         </tbody>
                     </table>
 
-
-                    <div class="col-md-6" id="disPieChart" style="width: 900px; height: 500px;"></div>
-                    <div class="col-md-6" id="disDonutChart" style="width: 900px; height: 500px;"></div>
+                    <div class="row">
+                        <div class="col-lg-6" id="disPieChart" style="width: 900px; height: 500px;"></div>
+                        <div class="col-lg-6" id="disDonutChart" style="width: 900px; height: 500px;"></div>
+                    </div>
 <!--                    <div class="col-md-6" id="disTreeMap" style="width: 900px; height: 500px;"></div>-->
 <!--                    <div class="col-md-6" id="disHistogram" style="width: 900px; height: 500px;"></div>-->
-                    <div class="col-md-6" id="disBarChart" style="width: 900px; height: 500px;"></div>
-                    <div class="col-md-6" id="disStepChart" style="width: 900px; height: 500px;"></div>
+<!--                    <div class="row">-->
+<!--                        <div class="col-lg-6" id="disBarChart" style="width: 900px; height: 500px;"></div>-->
+<!--                        <div class="col-lg-6" id="disStepChart" style="width: 900px; height: 500px;"></div>-->
+<!--                    </div>-->
                 </div>
             </div>
         </section>
@@ -131,7 +134,11 @@
 
                 var options = {
                     title: '질병 진단 정보 (질병 이름별)',
-                    pieHole: 0.4,
+                    slices: {
+                        0: { color: 'yellowgreen' },
+                        1: { color: 'pink' },
+                        2: { color: '#F8EB00' }
+                    }
                 };
 
                 var chart = new google.visualization.PieChart(document.getElementById('disDonutChart'));
@@ -257,88 +264,88 @@
              //     chart.draw(data, options);
              // }
 
-            google.charts.load('current', {packages: ['corechart', 'bar']});
-            google.charts.setOnLoadCallback(drawBarChart);
-
-            function drawBarChart() {
-
-                let diseaseBody = document.getElementsByTagName("tbody");
-                let diseaseTR = document.getElementsByClassName("diseaseTR");
-
-                let diseaseType = [];
-                let diseaseCount = [];
-                for(let i = 0; i < diseaseTR.length; i++) {
-                    diseaseType.push(diseaseBody[0].children[i].children[0].textContent);
-                    diseaseCount.push(parseInt(diseaseBody[0].children[i].children[1].textContent));
-                }
-
-                let diseaseData = [];
-                diseaseData.push(['질병', '빈도']);
-
-                for(let i = 0; i < diseaseTR.length; i++) {
-                    let tempData = [];
-                    tempData.push(diseaseType[i]);
-                    tempData.push(diseaseCount[i]);
-
-                    diseaseData.push(tempData);
-                }
-
-                var data = google.visualization.arrayToDataTable(diseaseData);
-
-                var options = {
-                    title: '질병 진단 정보 (막대 그래프)',
-                    chartArea: {width: '50%'},
-                    hAxis: {
-                        title: '빈도',
-                        minValue: 0
-                    },
-                    vAxis: {
-                        title: '질병'
-                    }
-                };
-
-                var chart = new google.visualization.BarChart(document.getElementById('disBarChart'));
-                chart.draw(data, options);
-            }
-
-            google.charts.load('current', {'packages':['corechart']});
-            google.charts.setOnLoadCallback(drawStepChart);
-
-            function drawStepChart() {
-
-                let diseaseBody = document.getElementsByTagName("tbody");
-                let diseaseTR = document.getElementsByClassName("diseaseTR");
-
-                let diseaseType = [];
-                let diseaseCount = [];
-                for(let i = 0; i < diseaseTR.length; i++) {
-                    diseaseType.push(diseaseBody[0].children[i].children[0].textContent);
-                    diseaseCount.push(parseInt(diseaseBody[0].children[i].children[1].textContent));
-                }
-
-                let diseaseData = [];
-                diseaseData.push(['질병', '빈도']);
-
-                for(let i = 0; i < diseaseTR.length; i++) {
-                    let tempData = [];
-                    tempData.push(diseaseType[i]);
-                    tempData.push(diseaseCount[i]);
-
-                    diseaseData.push(tempData);
-                }
-
-                var data = google.visualization.arrayToDataTable(diseaseData);
-
-                var options = {
-                    title: '질병 진단 정보 (계단 그래프)',
-                    vAxis: {title: '빈도'},
-                    isStacked: true
-                };
-
-                var chart = new google.visualization.SteppedAreaChart(document.getElementById('disStepChart'));
-
-                chart.draw(data, options);
-            }
+            // google.charts.load('current', {packages: ['corechart', 'bar']});
+            // google.charts.setOnLoadCallback(drawBarChart);
+            //
+            // function drawBarChart() {
+            //
+            //     let diseaseBody = document.getElementsByTagName("tbody");
+            //     let diseaseTR = document.getElementsByClassName("diseaseTR");
+            //
+            //     let diseaseType = [];
+            //     let diseaseCount = [];
+            //     for(let i = 0; i < diseaseTR.length; i++) {
+            //         diseaseType.push(diseaseBody[0].children[i].children[0].textContent);
+            //         diseaseCount.push(parseInt(diseaseBody[0].children[i].children[1].textContent));
+            //     }
+            //
+            //     let diseaseData = [];
+            //     diseaseData.push(['질병', '빈도']);
+            //
+            //     for(let i = 0; i < diseaseTR.length; i++) {
+            //         let tempData = [];
+            //         tempData.push(diseaseType[i]);
+            //         tempData.push(diseaseCount[i]);
+            //
+            //         diseaseData.push(tempData);
+            //     }
+            //
+            //     var data = google.visualization.arrayToDataTable(diseaseData);
+            //
+            //     var options = {
+            //         title: '질병 진단 정보 (막대 그래프)',
+            //         chartArea: {width: '50%'},
+            //         hAxis: {
+            //             title: '빈도',
+            //             minValue: 0
+            //         },
+            //         vAxis: {
+            //             title: '질병'
+            //         }
+            //     };
+            //
+            //     var chart = new google.visualization.BarChart(document.getElementById('disBarChart'));
+            //     chart.draw(data, options);
+            // }
+            //
+            // google.charts.load('current', {'packages':['corechart']});
+            // google.charts.setOnLoadCallback(drawStepChart);
+            //
+            // function drawStepChart() {
+            //
+            //     let diseaseBody = document.getElementsByTagName("tbody");
+            //     let diseaseTR = document.getElementsByClassName("diseaseTR");
+            //
+            //     let diseaseType = [];
+            //     let diseaseCount = [];
+            //     for(let i = 0; i < diseaseTR.length; i++) {
+            //         diseaseType.push(diseaseBody[0].children[i].children[0].textContent);
+            //         diseaseCount.push(parseInt(diseaseBody[0].children[i].children[1].textContent));
+            //     }
+            //
+            //     let diseaseData = [];
+            //     diseaseData.push(['질병', '빈도']);
+            //
+            //     for(let i = 0; i < diseaseTR.length; i++) {
+            //         let tempData = [];
+            //         tempData.push(diseaseType[i]);
+            //         tempData.push(diseaseCount[i]);
+            //
+            //         diseaseData.push(tempData);
+            //     }
+            //
+            //     var data = google.visualization.arrayToDataTable(diseaseData);
+            //
+            //     var options = {
+            //         title: '질병 진단 정보 (계단 그래프)',
+            //         vAxis: {title: '빈도'},
+            //         isStacked: true
+            //     };
+            //
+            //     var chart = new google.visualization.SteppedAreaChart(document.getElementById('disStepChart'));
+            //
+            //     chart.draw(data, options);
+            // }
         </script>
 
         <footer th:replace="fragments/footer :: footerFragment"></footer>
