--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -40,7 +40,7 @@
                                         <a sec:authorize="hasRole('ROLE_ADMIN')" class="nav-link" th:href="@{/admin/members}">회원 관리</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a sec:authorize="hasRole('ROLE_MEMBER')" class="nav-link" th:href="@{/member/reservesInfo}">동물병원 예약</a>
+                                        <a sec:authorize="hasRole('ROLE_MEMBER')" class="nav-link" th:href="@{/member/reservesInfo}">동물병원 예약 조회</a>
                                     </li>
 
                                     <li class="nav-item dropdown">
