--- a/src/main/resources/templates/disease/diseaseInfo.html
+++ b/src/main/resources/templates/disease/diseaseInfo.html
@@ -41,6 +41,39 @@
             </div>
         </section>
 
+        <section>
+            <div class="col-md-12">
+                <div class="container">
+
+                    <div>
+                        <table class="table table-horizontal table-striped table-bordered">
+                            <thead class="thead-strong">
+                                <tr>
+                                    <th>병원이름</th>
+                                    <th>방문날짜</th>
+                                    <th>병원주소</th>
+                                    <th>전화번호</th>
+                                    <th>예약내용</th>
+                                    <th>사용자명</th>
+                                </tr>
+                            </thead>
+
+                            <tbody id="tbody">
+                                <tr th:each="reserve : ${reserves}">
+                                    <td><a th:href="@{/admin/reserves/settings/{id}(id = ${reserve.id})}" th:text="${reserve.name}"></a></td>
+                                    <td th:text="${reserve.date}"></td>
+                                    <td th:text="${reserve.address}"></td>
+                                    <td th:text="${reserve.tel}"></td>
+                                    <td th:text="${reserve.description}"></td>
+                                    <td th:text="${reserve.member.getName()}"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <script type="text/javascript">
             google.charts.load('current', {'packages':['corechart']});
