--- a/src/main/resources/templates/admin/memberList.html
+++ b/src/main/resources/templates/admin/memberList.html
@@ -7,50 +7,46 @@
         <div class="col-md-12"></div>
         <div class="col-md-12">
             <div class="container">
-
                 <div>
                     <table class="table table-horizontal table-striped table-bordered">
                         <thead class="thead-strong">
-                        <tr>
-                            <th>ID</th>
-                            <th>이름</th>
-                            <th>이메일</th>
-                            <th>도시</th>
-                            <th>주소</th>
-                            <th>우편번호</th>
-                            <th>폰번호</th>
-                            <th>생일</th>
-                        </tr>
+                            <tr>
+                                <th>ID</th>
+                                <th>이름</th>
+                                <th>이메일</th>
+                                <th>도시</th>
+                                <th>주소</th>
+                                <th>우편번호</th>
+                                <th>폰번호</th>
+                                <th>생일</th>
+                            </tr>
                         </thead>
+
                         <tbody id="tbody">
-
-
-                        <tr th:each="member : ${members}">
-                            <td></td>
-                            <td><a th:href = "@{/admin/member/settings/{id}(id = ${member.id})}" th:text="${member.name}"></a></td>
-                            <td th:text="${member.email}"></td>
-                            <td th:text="${member.address?.city}"></td>
-                            <td th:text="${member.address?.street}"></td>
-                            <td th:text="${member.address?.zipcode}"></td>
-                            <td th:text="${member.phone}"></td>
-                            <td th:text="${member.birth}"></td>
-                        </tr>
-                        </a>
-
+                            <tr th:each="member : ${members}">
+                                <td></td>
+                                <td><a th:href = "@{/admin/member/settings/{id}(id = ${member.id})}" th:text="${member.name}"></a></td>
+                                <td th:text="${member.email}"></td>
+                                <td th:text="${member.address?.city}"></td>
+                                <td th:text="${member.address?.street}"></td>
+                                <td th:text="${member.address?.zipcode}"></td>
+                                <td th:text="${member.phone}"></td>
+                                <td th:text="${member.birth}"></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
+
         <script th:inline="javascript">
             const table = document.getElementsByTagName('tbody')[0],
                 rows = table.getElementsByTagName('tr'),
                 text = 'textContent' in document ? 'textContent' : 'innerText';
 
             for (let i = 0, len = rows.length; i < len; i++){
-                rows[i].children[0][text] = i ;
+                rows[i].children[0][text] = i+1;
             }
-
         </script>
         <footer th:replace="fragments/footer :: footerFragment"></footer>
     </body>
