style: Add table-hover and delete unnecessary comments

--- a/src/main/resources/templates/members/dogs/dogInfo.html
+++ b/src/main/resources/templates/members/dogs/dogInfo.html
@@ -9,7 +9,7 @@
     <div class="container">
 
         <div>
-            <table class="table table-horizontal table-striped table-bordered">
+            <table class="table table-horizontal table-striped table-hover table-bordered">
                 <thead class="thead-strong">
                 <tr>
                     <th>이름</th>
