--- a/src/main/resources/templates/admin/memberList.html
+++ b/src/main/resources/templates/admin/memberList.html
@@ -8,7 +8,7 @@
         <div class="col-md-12">
             <div class="container">
                 <div>
-                    <table class="table table-horizontal table-striped table-bordered">
+                    <table class="table table-horizontal table-striped table-hover table-bordered">
                         <thead class="thead-strong">
                             <tr>
                                 <th>ID</th>
