--- a/src/main/resources/templates/disease/diseaseInfo.html
+++ b/src/main/resources/templates/disease/diseaseInfo.html
@@ -50,7 +50,7 @@
             <div class="col-md-12">
                 <div class="container">
                     <div>
-                        <table class="table table-horizontal table-striped table-bordered">
+                        <table class="table table-horizontal table-striped table-hover table-bordered">
                             <thead class="thead-strong">
                                 <tr>
                                     <th>병원이름</th>
