fix: Implement Diagnosis result visualization

--- a/src/main/resources/templates/members/recommends/recommendation.html
+++ b/src/main/resources/templates/members/recommends/recommendation.html
@@ -100,29 +100,32 @@
 
             function drawDonutChart() {
 
-                let diseaseBody = document.getElementsByTagName("tbody");
-                let diseaseTR = document.getElementsByClassName("diseaseTR");
-
-                let diseaseName = [];
-                for(let i = 1; i < diseaseTR.length + 1; i++) {
-                    diseaseName.push(diseaseBody[0].children[i].children[0].textContent);
-                }
-
-                let allProb = [];
-                allProb.push(parseFloat(document.getElementById("cornaProb").textContent));
-                allProb.push(parseFloat(document.getElementById("brochusProb").textContent));
-                allProb.push(parseFloat(document.getElementById("macakProb").textContent));
+                // let diseaseBody = document.getElementsByTagName("tbody");
+                // let diseaseTR = document.getElementsByClassName("diseaseTR");
+                //
+                // let diseaseName = [];
+                // for(let i = 1; i < diseaseTR.length + 1; i++) {
+                //     diseaseName.push(diseaseBody[0].children[i].children[0].textContent);
+                // }
+                //
+                // let allProb = [];
+                // allProb.push(parseFloat(document.getElementById("macakProb").textContent));
+                // allProb.push(parseFloat(document.getElementById("cornaProb").textContent));
+                // allProb.push(parseFloat(document.getElementById("brochusProb").textContent));
 
                 let diagnosisData = [];
                 diagnosisData.push(['질병 진단', '빈도']);
+                diagnosisData.push(['마카다미아너트 중독증', parseFloat(document.getElementById("macakProb").textContent)]);
+                diagnosisData.push(['코로나 바이러스 감염증', parseFloat(document.getElementById("cornaProb").textContent)]);
+                diagnosisData.push(['기관지 확장증', parseFloat(document.getElementById("brochusProb").textContent)]);
 
-                for(let i = 0; i < diseaseTR.length; i++) {
-                    let tempData = [];
-                    tempData.push(diseaseName[i]);
-                    tempData.push(allProb[i]);
-
-                    diagnosisData.push(tempData);
-                }
+                // for(let i = 0; i < diseaseTR.length; i++) {
+                //     let tempData = [];
+                //     tempData.push(diseaseName[i]);
+                //     tempData.push(allProb[i]);
+                //
+                //     diagnosisData.push(tempData);
+                // }
 
                 var data = google.visualization.arrayToDataTable(diagnosisData);
 
