--- a/src/main/resources/templates/admin/memberList.html
+++ b/src/main/resources/templates/admin/memberList.html
@@ -11,7 +11,7 @@
                     <table class="table table-horizontal table-striped table-hover table-bordered">
                         <thead class="thead-strong">
                             <tr>
-                                <th>ID</th>
+                                <th>번호</th>
                                 <th>이름</th>
                                 <th>이메일</th>
                                 <th>도시</th>
@@ -44,8 +44,10 @@
                 rows = table.getElementsByTagName('tr'),
                 text = 'textContent' in document ? 'textContent' : 'innerText';
 
-            for (let i = 0, len = rows.length; i < len; i++){
-                rows[i].children[0][text] = i+1;
+            let idx = rows.length;
+            for (let i = 0; i < rows.length; i++){
+                rows[i].children[0][text] = idx;
+                idx -= 1;
             }
         </script>
         <footer th:replace="fragments/footer :: footerFragment"></footer>
