--- a/src/main/resources/templates/diagnosis/diagnosisList.html
+++ b/src/main/resources/templates/diagnosis/diagnosisList.html
@@ -12,6 +12,7 @@
                     <table class="table table-horizontal table-striped table-hover table-bordered">
                         <thead class="thead-strong">
                             <tr>
+                                <th>번호</th>
                                 <th>반려견</th>
                                 <th>질병명</th>
                                 <th>마카다미아너트 중독증</th>
@@ -22,7 +23,8 @@
 
                         <tbody id="tbody">
                             <tr th:each="dia : ${dias}">
-                                <td><a th:href = "@{/member/chart/recod/{id}(id = ${dia.id})}" th:text="${dia.dog}"></a></td>
+                                <td></td>
+                                <td><a th:href = "@{/member/chart/record/{id}(id = ${dia.id})}" th:text="${dia.dog}"></a></td>
                                 <td th:text="${dia.name}"></td>
                                 <td th:text="${dia.macak.getPercent()}"></td>
                                 <td th:text="${dia.corna.getPercent()}"></td>
@@ -33,6 +35,18 @@
                 </div>
             </div>
         </div>
+
+        <script th:inline="javascript">
+            const table = document.getElementsByTagName('tbody')[0],
+                rows = table.getElementsByTagName('tr'),
+                text = 'textContent' in document ? 'textContent' : 'innerText';
+
+            let idx = rows.length;
+            for (let i = 0; i < rows.length; i++){
+                rows[i].children[0][text] = idx;
+                idx -= 1;
+            }
+        </script>
 
         <footer th:replace="fragments/footer :: footerFragment"></footer>
     </body>
