Modify: Direct home diseaseService

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
                             <h5>The Best Gift For Your Pets</h5></br>
                             <h2>구해독의 <u>빅데이터</u>로 제공하는</br>
                                 정확도 높은 <u>인공지능</u></br> 질병 진단 서비스를 만나보세요.</h2></br><br>
-                            <a sec:authorize="hasRole('ROLE_MEMBER')" href="#" class="btn_1">질병 진단 서비스 바로가기</a>
+                            <a sec:authorize="hasRole('ROLE_MEMBER')"  th:href="@{/member/disease/chart}" class="btn_1">질병 진단 서비스 바로가기</a>
                         </div>
                     </div>
                 </div>
