feat : Add ai module management page and Symptom domain

--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -25,6 +25,8 @@
         <!-- circle progress bar CSS -->
         <link rel="stylesheet" type="text/css" href="/../../static/css/plugin.css">
         <link href="http://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+        <!-- loader CSS -->
+        <link rel="stylesheet" type="text/css" href="/../../static/css/loader.css">
 
         <!--===============================================================================================-->
         <!-- vender의 favicon 참조 삭제 -->
