--- a/src/main/resources/templates/disease/diseaseInfo.html
+++ b/src/main/resources/templates/disease/diseaseInfo.html
@@ -46,14 +46,14 @@
         <section>
             <h3 style="padding-left: 130px"><b>AI 질병 진단 모델 관리</b></h3>
             <div class="col-lg-12">
-                <form action="/members/dogs/dogSignUp" method="post" id="modelForm">
+                <form action="/api/AIRemodeling" method="post" id="modelForm"  th:object="${symptomForm}">
                     <div class="row" style="padding-left: 150px; padding-top:30px;">
                        다음 사항들을 입력합니다.
                     </div>
                     <div class="row" style="padding-left: 150px; padding-top:10px;">
-                        <input type="text" class="form-control" id="model" placeholder="증상 추가" style="width: 330px;"required>
-                        <input type="text" class="form-control" id="test_set" placeholder="test_set" style="width: 110px;" required>
-                        <input type="text" class="form-control" id="random_state" placeholder="random_state" style="width: 158px;" required>
+                        <input type="text" class="form-control" th:field="*{model}" placeholder="증상 추가" style="width: 330px;"required>
+                        <input type="text" class="form-control" th:field="*{test_size}" placeholder="test_set" style="width: 110px;" required>
+                        <input type="text" class="form-control" th:field="*{random_state}" placeholder="random_state" style="width: 158px;" required>
                     </div>
                     <div class="container-login100-form-btn" style="padding-left: 200px; padding-top: 30px; width: 350px;">
                         <div class="wrap-login100-form-btn" >
