fix: Change the URL

--- a/src/main/resources/templates/disease/diseaseInfo.html
+++ b/src/main/resources/templates/disease/diseaseInfo.html
@@ -40,24 +40,25 @@
                        다음 사항들을 입력합니다.
                     </div>
                     <div class="row" style="padding-left: 150px; padding-top:10px;">
-                        <input type="text" class="form-control" th:field="*{model}" placeholder="증상 추가" style="width: 330px;"required>
+                        <input type="text" class="form-control" th:field="*{model}" placeholder="증상 추가" style="width: 280px;"required>
                         <input type="text" class="form-control" th:field="*{test_size}" placeholder="test_set" style="width: 110px;" required>
                         <input type="text" class="form-control" th:field="*{random_state}" placeholder="random_state" style="width: 158px;" required>
-                    </div>
-                    <div class="container-login100-form-btn" style="padding-left: 200px; padding-top: 30px; width: 350px;">
-                        <div class="wrap-login100-form-btn" >
-                            <div class="login100-form-bgbtn"></div>
-                            <button class="login100-form-btn" type="submit" id="submitModel">
-                                변경완료
-                            </button>
+
+                        <div id="changeBtn" class="container-login100-form-btn" style="padding-left: 30px; width: 210px;">
+                            <div class="wrap-login100-form-btn" >
+                                <div class="login100-form-bgbtn"></div>
+                                <button class="login100-form-btn" type="submit" id="submitModel">
+                                    변경완료
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </form>
             </div>
         </section>
 
-            <section>
-            <h3 style="padding-top: 40px; padding-left: 130px"><b>동물병원 예약 내역</b></h3>
+        <section>
+            <h3 style="padding-top: 50px; padding-left: 130px"><b>동물병원 예약 내역</b></h3>
             <br/>
 
             <div class="col-md-12">
@@ -99,7 +100,7 @@
             $('form').submit(function (e) {
                 let form = this;
                 // 로딩바 가져오기
-                $("#submitModel").hide();
+                $("#changeBtn").hide();
                 $(".loader").fadeIn();
                 e.preventDefault();
                 setTimeout(function () {
