--- a/src/main/resources/templates/memberAuth/signUp.html
+++ b/src/main/resources/templates/memberAuth/signUp.html
@@ -68,7 +68,18 @@
                             <label th:for="street">상세주소</label>
                             <input type="text" th:field="*{street}" class="form-control" id="sample6_detailAddress" placeholder="상세주소" required>
                         </div>
-                        <br/>
+
+                        <div class="row" style="padding-left: 15px; padding-bottom: 15px;">
+                            <span>
+                                <input type="radio" id="GUEST" value="GUEST" th:field="*{role}" required>
+                                <label for="GUEST" style="padding-right: 10px">사용자</label>
+                            </span>
+
+                            <span>
+                                <input type="radio" id="VET" value="VET" th:field="*{role}" required>
+                                <label for="VET" style="padding-right: 10px">수의사</label>
+                            </span>
+                        </div>
 
                         <div class="container-login100-form-btn">
                             <div class="wrap-login100-form-btn">
@@ -171,6 +182,7 @@
                     }
                 });
             });
+
         </script>
     </body>
 </html>
