--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -66,7 +66,7 @@
 
                                     <li class="nav-item">
                                         <a sec:authorize="hasRole('ROLE_ADMIN')" class="nav-link" th:href="@{/admin/mypage}">정보조회</a>
-                                        <a sec:authorize="hasRole('ROLE_VET')" class="nav-link" href="#">정보조회</a>
+                                        <a sec:authorize="hasRole('ROLE_VET')" class="nav-link" th:href="@{/member/mypage}">정보조회</a>
                                     </li>
                                 </ul>
                             </div>
