--- a/src/main/resources/templates/memberAuth/settings.html
+++ b/src/main/resources/templates/memberAuth/settings.html
@@ -100,7 +100,20 @@
                             <label th:for="street">상세주소</label>
                             <input type="text" th:field="${member.address.street}" class="form-control" id="sample6_detailAddress" placeholder="상세주소" required>
                         </div>
-                        <br/>
+
+                        <div class="row" style="padding-left: 15px; padding-bottom: 15px;">
+                            <span>
+                                <input type="radio" id="GUEST" name="role" value="GUEST"
+                                       th:attr="checked=${member.role.toString() == 'GUEST' ? 'true' : 'false'}" disabled>
+                                <label for="GUEST" style="padding-right: 10px">사용자</label>
+                            </span>
+
+                            <span>
+                                <input type="radio" id="VET" name="role" value="VET"
+                                       th:attr="checked=${member.role.toString() == 'VET' ? 'true' : 'false'}" disabled>
+                                <label for="VET" style="padding-right: 10px">수의사</label>
+                            </span>
+                        </div>
 
                         <div class="container-login100-form-btn">
                             <div class="wrap-login100-form-btn">
